[gd_scene load_steps=14 format=3 uid="uid://bydtq8shqe5wu"]

[ext_resource type="Script" path="res://Scripts/card_manager.gd" id="1_30ctt"]
[ext_resource type="PackedScene" uid="uid://dfeewb4jet4ly" path="res://Scenes/card_slot.tscn" id="2_8i7uv"]
[ext_resource type="Script" path="res://Scripts/magic_card_slot.gd" id="3_401hg"]
[ext_resource type="Script" path="res://Scripts/player_hand.gd" id="3_j8yex"]
[ext_resource type="Texture2D" uid="uid://bj5i14b2qt5xb" path="res://Assets/Deck.png" id="4_2ym25"]
[ext_resource type="Script" path="res://Scripts/deck.gd" id="4_shv33"]
[ext_resource type="PackedScene" uid="uid://dwkbo1bdnudqp" path="res://Scenes/opponent_card_slot.tscn" id="4_vmqyn"]
[ext_resource type="Script" path="res://Scripts/input_manager.gd" id="6_6c0vt"]
[ext_resource type="Script" path="res://Scripts/opponent_hand.gd" id="6_p6uya"]
[ext_resource type="Script" path="res://Scripts/battle_manager.gd" id="9_pxvbb"]
[ext_resource type="Script" path="res://Scripts/opponent_deck.gd" id="10_wtyjg"]
[ext_resource type="Texture2D" uid="uid://uf86c5r7rixf" path="res://Assets/CardSlot.png" id="12_aqlke"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muxwd"]
size = Vector2(180, 265)

[node name="Main" type="Node2D"]

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_30ctt")

[node name="CardSlots" type="Node2D" parent="."]

[node name="CardSlot1" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(960, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_401hg")

[node name="CardSlot2" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(820, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_401hg")

[node name="CardSlot3" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(680, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_401hg")

[node name="CardSlot4" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(1100, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_401hg")

[node name="CardSlot5" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(1240, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_401hg")

[node name="CardSlot6" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(960, 570)
scale = Vector2(0.6, 0.6)

[node name="CardSlot7" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(820, 570)
scale = Vector2(0.6, 0.6)

[node name="CardSlot8" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(680, 570)
scale = Vector2(0.6, 0.6)

[node name="CardSlot9" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(1100, 570)
scale = Vector2(0.6, 0.6)

[node name="CardSlot10" parent="CardSlots" instance=ExtResource("2_8i7uv")]
z_index = -3
position = Vector2(1240, 570)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot1" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(960, 360)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot2" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(820, 360)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot3" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(680, 360)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot4" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(1100, 360)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot5" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(1240, 360)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot6" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(960, 180)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot7" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(820, 180)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot8" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(680, 180)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot9" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(1100, 180)
scale = Vector2(0.6, 0.6)

[node name="OpponentCardSlot10" parent="CardSlots" instance=ExtResource("4_vmqyn")]
position = Vector2(1240, 180)
scale = Vector2(0.6, 0.6)

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_j8yex")

[node name="OpponentHand" type="Node2D" parent="."]
script = ExtResource("6_p6uya")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(140, 955)
scale = Vector2(0.8, 0.8)
script = ExtResource("4_shv33")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = -2
texture = ExtResource("4_2ym25")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_muxwd")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
modulate = Color(0, 0, 0, 1)
z_index = -2
offset_left = -9.0
offset_top = -28.0
offset_right = 31.0
offset_bottom = 12.0
scale = Vector2(2, 2)
text = "0"

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_6c0vt")

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 300.0
offset_top = 570.0
offset_right = 378.0
offset_bottom = 601.0
text = "End Turn"

[node name="OpponentDeck" type="Node2D" parent="."]
position = Vector2(1780, 125)
script = ExtResource("10_wtyjg")

[node name="Sprite2D" type="Sprite2D" parent="OpponentDeck"]
z_index = -2
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_2ym25")

[node name="RichTextLabel" type="RichTextLabel" parent="OpponentDeck"]
modulate = Color(0, 0, 0, 1)
z_index = -2
offset_left = -10.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 10.0
scale = Vector2(2, 2)
text = "0"

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("9_pxvbb")

[node name="BattleTimer" type="Timer" parent="."]

[node name="PlayerHealth" type="RichTextLabel" parent="."]
offset_left = 130.0
offset_top = 630.0
offset_right = 170.0
offset_bottom = 670.0
scale = Vector2(2, 2)
text = "0"

[node name="OpponentHealth" type="RichTextLabel" parent="."]
offset_left = 130.0
offset_top = 430.0
offset_right = 170.0
offset_bottom = 470.0
scale = Vector2(2, 2)
text = "0"

[node name="PlayerDiscardPile" type="Node2D" parent="."]
position = Vector2(1500, 660)
scale = Vector2(0.6, 0.6)

[node name="Sprite2D" type="Sprite2D" parent="PlayerDiscardPile"]
texture = ExtResource("12_aqlke")

[node name="OpponentDiscardPile" type="Node2D" parent="."]
position = Vector2(400, 270)
scale = Vector2(0.6, 0.6)

[node name="Sprite2D" type="Sprite2D" parent="OpponentDiscardPile"]
texture = ExtResource("12_aqlke")

[connection signal="pressed" from="EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
